tests/invalid/generated_binop_sub_float_none/main.py
# Auto-generated invalid binop case.
def main() -> None:
    x: float = 1.0
    y: None = None
    z = x - y
